Added python-nose as build-depends, and allow unit tests to fail.

--- a/debian/control
+++ b/debian/control
@@ -9,6 +9,7 @@ Uploaders: Julien Danjou <acid@debian.org>,
 Build-Depends: debhelper (>= 9),
                python-all (>= 2.6.6-3~),
                python-ldap,
+               python-nose,
                python-setuptools,
 #               python3-all,
 #               python3-setuptools
