--- a/debian/control
+++ b/debian/control
@@ -14,8 +14,8 @@ Build-Depends: debhelper (>= 9),
 #               python3-all,
 #               python3-setuptools
 Standards-Version: 3.9.5
-Vcs-Browser: http://anonscm.debian.org/gitweb/?p=openstack/python-ldappool.git
-Vcs-Git: git://anonscm.debian.org/openstack/python-ldappool.git
+Vcs-Browser: https://anonscm.debian.org/cgit/openstack/python-ldappool.git/
+Vcs-Git: https://anonscm.debian.org/git/openstack/python-ldappool.git
 Homepage: https://github.com/mozilla-services/ldappool
 
 Package: python-ldappool
