--- a/debian/control
+++ b/debian/control
@@ -17,7 +17,7 @@ Build-Depends-Indep: python-coverage,
                      python-testresources,
                      python-testtools (>= 1.4.0),
                      python3-fixtures (>= 1.3.1),
-                     python3-ldap,
+                     python3-ldap3,
                      python3-subunit,
                      python3-testresources,
                      python3-testtools (>= 1.4.0),
@@ -48,7 +48,7 @@ Description: connection pool for python-ldap - Python 2.7
 
 Package: python3-ldappool
 Architecture: all
-Depends: python3-ldap,
+Depends: python3-ldap3,
          ${misc:Depends},
          ${python3:Depends},
 Description: connection pool for python-ldap - Python 3.x
