--- a/debian/control
+++ b/debian/control
@@ -13,11 +13,11 @@ Build-Depends: debhelper (>= 9),
 Build-Depends-Indep: python-coverage,
                      python-fixtures (>= 1.3.1),
                      python-hacking,
-                     python-ldap,
+                     python-pyldap,
                      python-testresources,
                      python-testtools (>= 1.4.0),
                      python3-fixtures (>= 1.3.1),
-                     python3-ldap,
+                     python3-pyldap,
                      python3-subunit,
                      python3-testresources,
                      python3-testtools (>= 1.4.0),
@@ -30,7 +30,7 @@ Homepage: https://github.com/mozilla-services/ldappool
 
 Package: python-ldappool
 Architecture: all
-Depends: python-ldap,
+Depends: python-pyldap,
          ${misc:Depends},
          ${python:Depends},
 Description: connection pool for python-ldap - Python 2.7
@@ -48,7 +48,7 @@ Description: connection pool for python-ldap - Python 2.7
 
 Package: python3-ldappool
 Architecture: all
-Depends: python3-ldap,
+Depends: python3-pyldap,
          ${misc:Depends},
          ${python3:Depends},
 Description: connection pool for python-ldap - Python 3.x
