--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: python
 Priority: optional
 Maintainer: PKG OpenStack <openstack-devel@lists.alioth.debian.org>
 Uploaders: Thomas Goirand <zigo@debian.org>,
-Build-Depends: debhelper (>= 9),
+Build-Depends: debhelper (>= 10),
                openstack-pkg-tools (>= 52~),
                python-all,
                python-setuptools,
@@ -24,8 +24,8 @@ Build-Depends-Indep: python-coverage,
                      subunit,
                      testrepository,
 Standards-Version: 3.9.5
-Vcs-Browser: https://anonscm.debian.org/cgit/openstack/python-ldappool.git/
-Vcs-Git: https://anonscm.debian.org/git/openstack/python-ldappool.git
+Vcs-Browser: https://git.openstack.org/cgit/openstack/deb-python-ldappool?h=debian%2Fnewton
+Vcs-Git: https://git.openstack.org/openstack/deb-python-ldappool -b debian/newton
 Homepage: https://github.com/mozilla-services/ldappool
 
 Package: python-ldappool
